complete overhaul of DataConverter. added bootstrap, optimized js, fixed math errors, fixed jumping labels, added responsive design

--- a/parkerhague.com/Content/CSS/converter_styles.css
+++ b/parkerhague.com/Content/CSS/converter_styles.css
@@ -1,22 +1,59 @@
-﻿html {
-    font-size: 62.5%;
-    box-sizing: border-box;
+﻿/*.btn is the main div-button that gets used for the programs functionality...adjusted w media query*/
+.btn {
+    /*spaces between grid buttons*/
+    margin-left: .5%;
+    margin-right: .5%;
+    margin-top: .5%;
+    margin-bottom: .5%;
+
+    /*sets height, width, color, and rounds corners of buttons*/
+    height: 8rem;
+    max-width: 24%;
+    border-radius: 20px;
+    /*only needed to set bg color on page load*/
+    background-color: #ff7979;
+}
+
+/*centers conversion label vertically in button div*/
+.height {
+    padding-top: 2rem;
 }
 
 body {
-    margin: 0;
-    height: 100%;
-    overflow: hidden
+    /*background color of page*/
+    background-color: #95a5a6;
+
+    /*gets rid of horizontal scrolling*/
+    max-width: 100%;
+    overflow: hidden;
 }
 
-*,
-*::before,
-*::after {
-    margin: 0;
+
+/*set to normal here and adjusted per screensize w media query*/
+.wrap {
+    overflow-wrap: normal;
+}
+
+/*sets padding of button container to 0...changed w media query*/
+.container-padding {
     padding: 0;
-    box-sizing: inherit;
 }
 
+/*margin on input box...adjusted w media query*/
+.input-margin {
+    margin-bottom: 5rem;
+}
+
+/*adjusts btn conversion type label*/
+.type-label {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+/*adjusts label for the input box...changed with media query*/
+.input-label{
+    margin-top: 2.5rem;
+}
 
 /* NAVBAR SECTION */
 /* shows active element for scrollspy */
@@ -31,15 +68,18 @@ body {
     padding: 0em;
 }
 
-    /* sets text color white */
-    #naver li a {
-        color: #fff;
-        font-size: 1.9rem;
-        padding-left: 1.5rem;
-    }
+/* adjusts the text of the links inside the navbar */
+#naver li a {
+    color: #fff;
+    font-size: 1.2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
+/*adjusts big text on left side of navbar*/
 .navbar-brand {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
+    color: #fff;
 }
 
 /* spacing from side scroll bar & bg color */
@@ -47,30 +87,26 @@ body {
     background-color: #343a40;
 }
 
-/*color on inside of navabr and dropdwon*/
+/*color on inside of navbar and dropdown*/
 #naver li {
     background-color: #343a40;
 }
 
-    /* highlights links on hover */
-    #naver li:hover,
-    li:focus-within {
-        background: #66A5AD;
-        cursor: pointer;
-    }
+/* highlights links on hover */
+#naver li:hover,
+li:focus-within {
+    background: #66A5AD;
+    cursor: pointer;
+}
 
-#naver ul > li > ul :hover {
+#naver ul>li>ul :hover {
     background-color: #66A5AD;
     cursor: pointer;
 }
 
-.navbar-header .navbar-brand {
-    color: #fff;
-}
-
 /* opens dropdown on hover */
-#naver ul li:hover > ul,
-ul li:focus-within > ul,
+#naver ul li:hover>ul,
+ul li:focus-within>ul,
 ul li ul:hover,
 ul li ul:focus {
     visibility: visible;
@@ -78,153 +114,61 @@ ul li ul:focus {
     display: block
 }
 
-
 /* NAVBAR SECTION */
 
+@media only screen and (max-width: 995px) {
 
-.containerr {
-    text-align: center;
-    padding-top: 20px;
+    /*makes converted number wrap to next line instead of overflowing*/
+    .wrap {
+        overflow-wrap: break-word;
+    }
 }
 
-.btnContainer {
-    display: inline-block;
+@media only screen and (max-width: 600px) {
+
+    /*sets padding of button container to accommodate small screen*/
+    .container-padding {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    /*moves converted label up to fix overflowing line break digits*/
+    .height {
+        padding-top: .4rem;
+    }
 }
 
-.nav-wrapper {
-    position: fixed;
-    width: 100%;
-}
+@media only screen and (max-width: 376px) {
 
-.inputLabel {
-    font-size: 35px;
-    font-weight: bold;
-}
+    .input-margin {
+        margin-bottom: 1rem;
+    }
 
-input {
-    height: 40px;
-    border-radius: 5px;
-    font-size: 25px;
-}
+    /*adjusts btn conversion type label*/
+    .type-label {
+        font-size: .88rem;
+        font-weight: normal;
 
-.convertButtons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 15px;
-    padding-top: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-bottom: 100px;
-    vertical-align: top;
-}
+    }
 
+    /*adjusts label for the input box...changed with media query*/
+    .input-label{
+    margin-top: 1rem;
+    }
+
+    /*.btn is the main div-button that gets used for the programs functionality...adjusted w media query*/
 .btn {
-    height: 145px;
-    width: 145px;
+    /*spaces between grid buttons*/
+    margin-left: .5%;
+    margin-right: .5%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+
+    /*sets height, width, color, and rounds corners of buttons*/
+    height: 8rem;
+    max-width: 24%;
     border-radius: 20px;
+    /*only needed to set bg color on page load*/
     background-color: #ff7979;
 }
-
-body {
-    background-color: #95a5a6;
-}
-
-button:hover {
-    background-color: #f9ca24;
-}
-
-button:visited {
-    background-color: #f9ca24;
-}
-
-.clicked {
-    background-color: #f9ca24;
-}
-
-label {
-    overflow-wrap: break-word;
-}
-
-a {
-    font-size: 20px;
-}
-
-.inputLabel {
-    font-size: 25px;
-}
-
-.datatypeLabel {
-    font-weight: bold;
-    font-size: 18px;
-}
-
-@media (max-device-width: 480px) {
-
-    .containerr {
-        max-height: 470px;
-        max-width: 470px;
-        margin: 0px;
-        position: absolute;
-        top: 2%;
-        left: 2%;
-    }
-
-    /* I did this to fix the problem of page content showing behind the nav bar */
-    .nav-wrapper {
-        z-index: 999;
-        position: fixed;
-        width: 100%;
-    }
-
-    input {
-        height: 40px;
-        width: 250px;
-        border-radius: 5px;
-        font-size: 25px;
-    }
-
-    .btnContainer {
-        max-width: 470px;
-        max-height: 470px;
-        padding: 10px;
-        margin: 0px;
-    }
-
-    .btn {
-        height: 105px;
-        width: 105px;
-        border-radius: 20px;
-        font-size: 14px;
-        font-family: 'Courier New', Courier, monospace;
-        text-align: center;
-        background-color: #ff7979;
-    }
-
-    .convertButtons {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 7px;
-        padding-top: 20px;
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-bottom: 5px;
-        vertical-align: top;
-    }
-
-    .datatypeLabel {
-        font-weight: bold;
-        font-size: 14px;
-    }
-
-    .inputLabel {
-        font-size: 30px;
-        font-weight: bold;
-    }
-
-    html,
-    body {
-        margin: 0;
-        height: 100%;
-        overflow: hidden
-    }
 }
